| Bug #40734 | Initial creation redo-log-files can be slow on some os/hw combinations | ||
|---|---|---|---|
| Submitted: | 14 Nov 2008 12:10 | Modified: | 14 Nov 2008 15:07 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | * | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[14 Nov 2008 12:10]
Jonas Oreland
[14 Nov 2008 12:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/58761 2737 Jonas Oreland 2008-11-14 ndb - bug#40734 - only sync redo-files at end during initial redo creation
[14 Nov 2008 12:17]
Bugs System
Pushed into 5.1.29-ndb-6.4.0 (revid:jonas@mysql.com-20081114111753-0tfcc2to1fsq0d9b) (version source revid:jonas@mysql.com-20081114112117-mazijdv8mdxtso7r) (pib:5)
[14 Nov 2008 12:17]
Bugs System
Pushed into 5.1.29-ndb-6.2.17 (revid:jonas@mysql.com-20081114111753-0tfcc2to1fsq0d9b) (version source revid:jonas@mysql.com-20081114111753-0tfcc2to1fsq0d9b) (pib:5)
[14 Nov 2008 12:18]
Bugs System
Pushed into 5.1.29-ndb-6.3.19 (revid:jonas@mysql.com-20081114111753-0tfcc2to1fsq0d9b) (version source revid:jonas@mysql.com-20081114111935-evdvbapq4q3d6p73) (pib:5)
[14 Nov 2008 15:07]
Jon Stephens
Documented in the NDB-6.2.17 and NDB-6.3.18 changelogs as follows:
Redo log creation was very slow on some platforms, causing MySQL Cluster
to start more slowly than necessary with some combinations of hardware
and operating system. This was due to all write operations being
synchronized to disk while creating a redo log file. Now this
synchronization occurs only after the redo log has been created.
[13 Dec 2008 0:26]
Bugs System
Pushed into 6.0.9-alpha (revid:jonas@mysql.com-20081114111753-0tfcc2to1fsq0d9b) (version source revid:tomas.ulin@sun.com-20081209185954-9svcixh2p5hsfi6w) (pib:5)
