ndb - bug#40734 - only sync redo-files at end during initial redo creation